--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/cli": "^4.1.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "mysql2": "^3.14.1",
     "tailwindcss": "^4.1.7"
   }
 }
