--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/cli": "^4.1.7",
+    "bcrypt": "^6.0.0",
+    "connect-mongodb-session": "^5.0.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "mysql2": "^3.14.1",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.15.2",
+    "multer": "^2.0.1",
     "tailwindcss": "^4.1.7"
   }
 }
